<resources>
    <string name="app_name">守护天使</string>
    <string name="mine">我的</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_register">登录/注册</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="babyAge">宝宝出生日期</string>
    <string name="ID">账号</string>
    <string name="identity_card">身份证</string>
    <string name="address">详细地址</string>
    <string name="addressLost">走失地址:</string>
    <string name="timeLost">走失时间:</string>
    <string name="mobile_1">手机①</string>
    <string name="mobile_2">手机②</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="personal_data">个人资料</string>
    <string name="submit">提交</string>
    <string name="upload">上传照片</string>
    <string name="focus">关注</string>
    <string name="homepage">主页</string>
    <string name="latest">最新</string>
    <string name="time">2006年1月1日</string>
    <string name="addNews">添加信息</string>
    <string name="fingerPrint">指纹识别</string>
    <string name="setting">设置</string>
    <string name="release">发布</string>
    <string name="controller">被监护人</string>
    <string name="personSetting">个人设置</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="subscribe">订阅</string>
    <string name="personAdd">添加儿童或老人</string>
    <string name="old">老人</string>
    <string name="child">儿童</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="man">先生</string>
    <string name="woman">女士</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="choose_photo">请选择照片</string>
    <string name="address_choose">选择省份</string>
    <string name="province">省份.市区.乡镇</string>
    <string name="locator">点我定位</string>
    <string name="sure_submit">确定提交</string>
    <string name="cancel_submit">我再检查一下</string>
    <string name="choose_province">请选择城市</string>
    <string name="age">年龄</string>
    <string name="lostWear">丢失时穿着</string>
    <string name="physical">身体明显特征</string>
    <string name="message">留言区</string>
    <string name="child_seek">寻找儿童</string>
    <string name="older_seek">寻找老人</string>
    <string name="connect">联系他/她</string>
    <string name="informed">已通知该监护人</string>
    <string name="search">搜索</string>
    <string name="search_name">按姓名查找</string>
    <string name="location">选择地点</string>
    <string name="account">账号</string>
    <string name="password_forget">忘记密码？</string>
    <string name="discuss">讨论区</string>
    <string name="inform">通知</string>
    <string name="moneySearch">悬赏金额：</string>
    <string name="zero">零</string>
    <string name="mobileInput">请输入手机号！</string>
    <string name="passwordInput">请输入密码！</string>
    <string name="messageSend">发送短信</string>
    <string name="authCodeInput">请输入验证码</string>
    <string name="test">进行验证</string>
    <string name="isMan">我是先生</string>
    <string name="isWoman">我是女士</string>
    <string name="passwordSure">确认密码</string>
    <string name="patName">昵称</string>
    <string name="NotCall">手机权限丢失，请自己手动拨打！</string>


</resources>
