<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
        android:id="@+id/draw_lasted_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        fresco:placeholderImage="@color/colorWhite" />

    <TextView
        android:id="@+id/tv_latest_name"
        style="@style/TextFullLineStyle"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tv_latest_gender"
        style="@style/TextFullLineStyle"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/tv_latest_age"
        style="@style/TextFullLineStyle"
        android:text="@string/age" />

    <TextView
        android:id="@+id/tv_latest_lostTime"
        style="@style/TextFullLineStyle"
        android:text="@string/timeLost" />

    <TextView
        android:id="@+id/tv_latest_lostAddress"
        style="@style/TextFullLineStyle"
        android:text="@string/addressLost" />

    <TextView
        android:id="@+id/tv_latest_lostWear"
        style="@style/TextFullLineStyle"
        android:text="@string/lostWear" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_latest_mobile1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/mobile_1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_latest_mobile1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_latest_mobile2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/mobile_2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_latest_mobile2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect" />
    </LinearLayout>

<TextView
    android:id="@+id/test_searchMoney"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/moneySearch"
    android:textSize="20sp"/>
</LinearLayout>