<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/TextTitleStyle"
            android:text="@string/account"
            />
        <EditText
            style="@style/mobileInput" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/TextTitleStyle"
            android:text="@string/password"
            />
        <EditText
            style="@style/passwordInput" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/TextTitleStyle"
            android:text="@string/passwordSure"
            />
        <EditText
            style="@style/passwordInput" />
    </LinearLayout>
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton
        style="@style/RadioButtonStyle"
        android:text="@string/isMan"/>
    <RadioButton
       style="@style/RadioButtonStyle"
        android:text="@string/isWoman"/>
</RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/TextTitleStyle"
            android:text="@string/patName"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="6"/>
    </LinearLayout>

</LinearLayout>