<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
<EditText
    android:id="@+id/et_mobile"
    style="@style/mobileInput"/>
    <Button
        android:id="@+id/button_sendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messageSend"/>
    <EditText
        android:id="@+id/et_authCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="6"
        android:inputType="number"
        android:hint="@string/authCodeInput"/>
    <Button
        android:id="@+id/button_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"/>
</LinearLayout>