<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/mine"
                android:textSize="30sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:visibility="visible">

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    android:text="@string/login_register"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/draw_mine_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="3dp"
                    fresco:placeholderImage="@color/colorBlue" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/draw_mine_icon"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_mine_ID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/ID"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv_mine_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/name"
                        android:textSize="30sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_personSetting"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/personSetting"
                    android:textSize="20sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_mine_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/login_register"
                android:textSize="30sp"
                android:visibility="visible"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_collect"
                    style="@style/RadioButtonStyle"
                    android:background="@color/colorBlue"
                    android:button="@null"
                    android:text="@string/collect" />

                <RadioButton
                    android:id="@+id/radioButton_share"
                    style="@style/RadioButtonStyle"
                    android:background="@color/colorBlue"
                    android:button="@null"
                    android:text="@string/share" />

                <RadioButton
                    android:id="@+id/radioButton_subscribe"
                    style="@style/RadioButtonStyle"
                    android:background="@color/colorBlue"
                    android:button="@null"
                    android:text="@string/subscribe" />
            </RadioGroup>

            <Button
                android:id="@+id/button_baby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/controller"
                android:textSize="30sp" />


            <Button
                android:id="@+id/button_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/setting"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>