<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
    <com.facebook.drawee.view.SimpleDraweeView
        xmlns:fresco="http://schemas.android.com/apk/res-auto"
        android:id="@+id/draw_user_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        fresco:placeholderImage="@mipmap/person"/>
   <LinearLayout
       android:layout_width="0dp"
       android:layout_weight="1"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="vertical">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/name"
           android:textSize="20sp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/gender"
           android:textSize="20sp"/>
   </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/babyAge"
            android:textSize="20sp"/>


    </LinearLayout>
    <com.facebook.drawee.view.SimpleDraweeView
        xmlns:fresco="http://schemas.android.com/apk/res-auto"
        android:id="@+id/draw_user_photo"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="300dp"
        fresco:placeholderImage="@mipmap/person"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/addressLost"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/timeLost"
        android:textSize="20sp"/>
</LinearLayout>