<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/search_name"/>
        <Button
            android:id="@+id/button_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release"/>
    </LinearLayout>
<android.support.design.widget.TabLayout
    android:id="@+id/tab_lasted"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlue"/>

<android.support.v4.view.ViewPager
    android:id="@+id/vp_lasted"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

</android.support.v4.view.ViewPager>
</LinearLayout>